docs/v3.5.4/_sources/gallery/experiment/coreshell/coreshell_a1_vs_corediameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/coreshell/coreshell_a1_vs_corediameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_coreshell_coreshell_a1_vs_corediameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_coreshell_coreshell_a1_vs_corediameter.py:


CoreShell: An vs Core Diameter
==============================

This example demonstrates how to compute and visualize the B1 scattering parameter as a function of core diameter for CoreShell scatterers using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-18

.. code-block:: Python

    import numpy as np
    from PyMieSim.experiment.scatterer import CoreShell
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material
    from PyMieSim.units import nanometer, degree, watt, AU, RIU









.. GENERATED FROM PYTHON SOURCE LINES 19-21

Defining the source
In the LMT framework, the source is always considered a plane wave with a default amplitude of one.

.. GENERATED FROM PYTHON SOURCE LINES 21-28

.. code-block:: Python

    source = Gaussian(
        wavelength=800 * nanometer,  # 800 nm
        polarization=0 * degree,  # Linear polarization angle in radians
        optical_power=1e-3 * watt,  # 1 milliwatt
        NA=0.2 * AU  # Numerical Aperture
    )








.. GENERATED FROM PYTHON SOURCE LINES 29-31

Defining the scatterer distribution
Here, we explore core/shell scatterers with a constant shell diameter and variable core diameter.

.. GENERATED FROM PYTHON SOURCE LINES 31-40

.. code-block:: Python

    scatterer = CoreShell(
        core_diameter=np.geomspace(100, 600, 10) * nanometer,  # Geometrically spaced core diameters
        shell_thickness=150 * nanometer,  # Shell width of 800 nm
        core_property=[1.4] * RIU,  # Refractive index of the core
        shell_property=[Material.BK7],  # BK7 glass material for the shell
        medium_property=1 * RIU,  # Refractive index of the surrounding medium
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 41-43

Defining the experiment setup
Integrating the defined source and scatterers into a single experimental setup.

.. GENERATED FROM PYTHON SOURCE LINES 43-45

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 800.0 nm to 800.0 nm which is outside the allowable range of 5.0 µm to 33.333 µm µm. [Material: BK7]
      warnings.warn(




.. GENERATED FROM PYTHON SOURCE LINES 46-48

Measuring the B1 scattering parameter
Here, we're interested in the a3 (first magnetic coefficient) parameter, which seems to be a typo for B1.

.. GENERATED FROM PYTHON SOURCE LINES 48-50

.. code-block:: Python

    dataframe = experiment.get('a1', 'a2', 'a3',  'Qsca')








.. GENERATED FROM PYTHON SOURCE LINES 51-53

Plotting the results
Visualizing how the B1 (a3) parameter varies with the core diameter.

.. GENERATED FROM PYTHON SOURCE LINES 53-54

.. code-block:: Python

    dataframe.plot(x="scatterer:core_diameter")



.. image-sg:: /gallery/experiment/coreshell/images/sphx_glr_coreshell_a1_vs_corediameter_001.png
   :alt: coreshell a1 vs corediameter
   :srcset: /gallery/experiment/coreshell/images/sphx_glr_coreshell_a1_vs_corediameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='scatterer:core_diameter', ylabel='dimensionless'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.226 seconds)


.. _sphx_glr_download_gallery_experiment_coreshell_coreshell_a1_vs_corediameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coreshell_a1_vs_corediameter.ipynb <coreshell_a1_vs_corediameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coreshell_a1_vs_corediameter.py <coreshell_a1_vs_corediameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coreshell_a1_vs_corediameter.zip <coreshell_a1_vs_corediameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
